--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./mobile.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,38 +13,19 @@
             <div class="hat"></div>
             <div class="rectangule-red"></div>
             <div class="rectangule"></div> 
-
         </div>
         <div class="head">
-            <div class="eye-left"></div>
-            <div class="eye-right"></div>
-            <div class="ear-left"></div>
-            <div class="ear-right"></div>
-            <div class="nose"></div>
-            <div class="mouth"></div>          
+            <div class="eye-left"></div>        
         </div>
         <div class="chin">
             <div class="teeth"></div>
             <div class="teeth-2"></div>
-            <div class="teeth-3"></div>
-            <div class="teeth-4"></div>
         </div>
         <div class="bone">
             <div class="bone-left">
                 <div class="circle-1"></div>
-                <div class="circle-2"></div>
-                <div class="rectangule-3"></div>
-                <div class="circle-4"></div>
-                <div class="circle-5"></div>
-                <div class="rectangule-6"></div>
             </div>
-            <div class="bone-rigth">
-                <div class="circle-7"></div>
-                <div class="circle-8"></div>
-                <div class="rectangule-9"></div>
-                <div class="circle-10"></div>
-                <div class="circle-11"></div>
-                <div class="rectangule-12"></div>
+            <div class="bone-rigth">                
             </div>
         </div>
         
